; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_btrfs_lookup_inode.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_btrfs_lookup_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_disk_key = type { i32, i32, i32 }
%struct.btrfs_inode_item = type { i32 }
%struct.btrfs_root_item = type { i32 }
%struct.btrfs_path = type { i32 }

@.str = private unnamed_addr constant [32 x i8] c"Searching inode (%llu %u %llu)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btrfs_root_item*, %struct.btrfs_disk_key*, %struct.btrfs_inode_item*, %struct.btrfs_root_item*)* @btrfs_lookup_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btrfs_lookup_inode(%struct.btrfs_root_item* %0, %struct.btrfs_disk_key* %1, %struct.btrfs_inode_item* %2, %struct.btrfs_root_item* %3) #0 {
  %5 = alloca %struct.btrfs_root_item*, align 8
  %6 = alloca %struct.btrfs_disk_key*, align 8
  %7 = alloca %struct.btrfs_inode_item*, align 8
  %8 = alloca %struct.btrfs_root_item*, align 8
  %9 = alloca %struct.btrfs_root_item, align 4
  %10 = alloca %struct.btrfs_path, align 4
  %11 = alloca i32, align 4
  store %struct.btrfs_root_item* %0, %struct.btrfs_root_item** %5, align 8
  store %struct.btrfs_disk_key* %1, %struct.btrfs_disk_key** %6, align 8
  store %struct.btrfs_inode_item* %2, %struct.btrfs_inode_item** %7, align 8
  store %struct.btrfs_root_item* %3, %struct.btrfs_root_item** %8, align 8
  %12 = load %struct.btrfs_root_item*, %struct.btrfs_root_item** %5, align 8
  %13 = bitcast %struct.btrfs_root_item* %9 to i8*
  %14 = bitcast %struct.btrfs_root_item* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %13, i8* align 4 %14, i64 4, i1 false)
  store i32 -1, i32* %11, align 4
  %15 = call i32 @init_path(%struct.btrfs_path* %10)
  %16 = load %struct.btrfs_disk_key*, %struct.btrfs_disk_key** %6, align 8
  %17 = getelementptr inbounds %struct.btrfs_disk_key, %struct.btrfs_disk_key* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.btrfs_disk_key*, %struct.btrfs_disk_key** %6, align 8
  %20 = getelementptr inbounds %struct.btrfs_disk_key, %struct.btrfs_disk_key* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.btrfs_disk_key*, %struct.btrfs_disk_key** %6, align 8
  %23 = getelementptr inbounds %struct.btrfs_disk_key, %struct.btrfs_disk_key* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @TRACE(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %18, i32 %21, i32 %24)
  %26 = load %struct.btrfs_disk_key*, %struct.btrfs_disk_key** %6, align 8
  %27 = call i64 @BtrFsSearchTree(%struct.btrfs_root_item* %9, %struct.btrfs_disk_key* %26, %struct.btrfs_path* %10)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %46

29:                                               ; preds = %4
  %30 = load %struct.btrfs_inode_item*, %struct.btrfs_inode_item** %7, align 8
  %31 = icmp ne %struct.btrfs_inode_item* %30, null
  br i1 %31, label %32, label %38

32:                                               ; preds = %29
  %33 = load %struct.btrfs_inode_item*, %struct.btrfs_inode_item** %7, align 8
  %34 = call i64 @path_current_data(%struct.btrfs_path* %10)
  %35 = inttoptr i64 %34 to %struct.btrfs_inode_item*
  %36 = bitcast %struct.btrfs_inode_item* %33 to i8*
  %37 = bitcast %struct.btrfs_inode_item* %35 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %36, i8* align 4 %37, i64 4, i1 false)
  br label %38

38:                                               ; preds = %32, %29
  %39 = load %struct.btrfs_root_item*, %struct.btrfs_root_item** %8, align 8
  %40 = icmp ne %struct.btrfs_root_item* %39, null
  br i1 %40, label %41, label %45

41:                                               ; preds = %38
  %42 = load %struct.btrfs_root_item*, %struct.btrfs_root_item** %8, align 8
  %43 = bitcast %struct.btrfs_root_item* %42 to i8*
  %44 = bitcast %struct.btrfs_root_item* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %43, i8* align 4 %44, i64 4, i1 false)
  br label %45

45:                                               ; preds = %41, %38
  store i32 0, i32* %11, align 4
  br label %46

46:                                               ; preds = %45, %4
  %47 = call i32 @free_path(%struct.btrfs_path* %10)
  %48 = load i32, i32* %11, align 4
  ret i32 %48
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @init_path(%struct.btrfs_path*) #2

declare dso_local i32 @TRACE(i8*, i32, i32, i32) #2

declare dso_local i64 @BtrFsSearchTree(%struct.btrfs_root_item*, %struct.btrfs_disk_key*, %struct.btrfs_path*) #2

declare dso_local i64 @path_current_data(%struct.btrfs_path*) #2

declare dso_local i32 @free_path(%struct.btrfs_path*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
